--- a/documentation/scenarios/index.html
+++ b/documentation/scenarios/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -93,7 +93,7 @@
 			      		<!--Title:Scenarios-->
 <!--Url:scenarios-->
 <p>This page documents various use cases with a sample implementation using Marten.</p>
-<h2>Scenarios</h2>
+<h2 id="scenarios">Scenarios</h2>
 <ul class="table-of-contents"><li><a href="/marten/documentation/scenarios/immutable_projections_readmodel">Immutable projections as read model</a></li></ul>
 
 			      	</div>
