--- a/documentation/documents/advanced/patch_api/index.html
+++ b/documentation/documents/advanced/patch_api/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -111,50 +111,50 @@ back to JSON&quot; workflow.</p>
 </ol>
 <p>The patch operation can be configured to either execute against a single document by supplying its id, or with a <em>Where</em> clause expression.
 In all cases, the property or field being updated can be a deep accessor like <code>Target.Inner.Color</code>.</p>
-<h2>Patching by Where Expression</h2>
+<h2 id="patching-by-where-expression">Patching by Where Expression</h2>
 <p>To apply a patch to all documents matching a given criteria, use the following syntax:</p>
 <pre><code class="language-csharp">&#xD;&#xA;// Change every Target document where the Color is Blue&#xD;&#xA;theSession.Patch&lt;Target&gt;(x =&gt; x.Color == Colors.Blue).Set(x =&gt; x.Number, 2);&#xD;&#xA;</code></pre>
-<h2>Setting a single Property/Field</h2>
+<h2 id="setting-a-single-propertyfield">Setting a single Property/Field</h2>
 <p>The usage of <code>IDocumentSession.Patch().Set()</code> to change the value of a single persisted field is
 shown below:</p>
-<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void set_an_immediate_property_by_id()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    target.Number = 5;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Set(x =&gt; x.Number, 10);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(10);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Initialize a new Property/Field</h2>
+<pre><code class="language-csharp">&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;[Fact]&#xD;&#xA;public void set_an_immediate_property_by_id()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    target.Number = 5;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Set(x =&gt; x.Number, 10);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(10);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<h2 id="initialize-a-new-propertyfield">Initialize a new Property/Field</h2>
 <p>To initialize a new property on existing documents:</p>
 <pre><code class="language-csharp">&#xD;&#xA;const string where = &quot;where (data -&gt;&gt; &#x27;UpdatedAt&#x27;) is null&quot;;&#xD;&#xA;theSession.Query&lt;Target&gt;(where).Count.ShouldBe(3);&#xD;&#xA;theSession.Patch&lt;Target&gt;(new WhereFragment(where)).Set(&quot;UpdatedAt&quot;, DateTime.UtcNow);&#xD;&#xA;theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;using (var query = theStore.QuerySession())&#xD;&#xA;{&#xD;&#xA;    query.Query&lt;Target&gt;(where).Count.ShouldBe(0);&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Duplicating an existing Property/Field</h2>
+<h2 id="duplicating-an-existing-propertyfield">Duplicating an existing Property/Field</h2>
 <p>To copy an existing value to a new location:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var target = Target.Random();&#xD;&#xA;target.AnotherString = null;&#xD;&#xA;theSession.Store(target);&#xD;&#xA;theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;theSession.Patch&lt;Target&gt;(target.Id).Duplicate(t =&gt; t.String, t =&gt; t.AnotherString);&#xD;&#xA;theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;using (var query = theStore.QuerySession())&#xD;&#xA;{&#xD;&#xA;    var result = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;    result.AnotherString.ShouldBe(target.String);&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>The same value can be copied to multiple new locations:</p>
 <pre><code class="language-csharp">&#xD;&#xA;theSession.Patch&lt;Target&gt;(target.Id).Duplicate(t =&gt; t.String,&#xD;&#xA;    t =&gt; t.StringField,&#xD;&#xA;    t =&gt; t.Inner.String,&#xD;&#xA;    t =&gt; t.Inner.AnotherString);&#xD;&#xA;</code></pre>
 <p>The new locations need not exist in the persisted document, null or absent parents will be initialized</p>
-<h2>Incrementing an Existing Value</h2>
+<h2 id="incrementing-an-existing-value">Incrementing an Existing Value</h2>
 <p>To increment a persisted value in the persisted document, use this operation:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void increment_for_int()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    target.Number = 6;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Increment(x =&gt; x.Number);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(7);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>By default, the <code>Increment()</code> operation will add 1 to the existing value. You can optionally override the increment:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void increment_for_int_with_explicit_increment()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    target.Number = 6;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Increment(x =&gt; x.Number, 3);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;Target&gt;(target.Id).Number.ShouldBe(9);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Append an Element to a Child Collection</h2>
+<h2 id="append-an-element-to-a-child-collection">Append an Element to a Child Collection</h2>
 <p>The <code>Patch.Append()</code> operation adds a new item to the end of a child collection:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void append_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Append(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.Last().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>Marten can append either complex, value object values or primitives like numbers or strings.</p>
-<h2>Insert an Element into a Child Collection</h2>
+<h2 id="insert-an-element-into-a-child-collection">Insert an Element into a Child Collection</h2>
 <p>Instead of adding an item to the end of a child collection, the <code>Insert()</code> operation allows you
 to put a new item into a persisted collection with a given index -- with the default index
 being 0 so that a new item would be inserted at the beginning of the child collection.</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void insert_first_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var child = Target.Random();&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Insert(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount &#x2B; 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.First().Id.ShouldBe(child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Remove an Element from a Child Collection</h2>
+<h2 id="remove-an-element-from-a-child-collection">Remove an Element from a Child Collection</h2>
 <p>The <code>Patch.Remove()</code> operation removes the given item from a child collection:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void remove_primitive_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    var initialCount = target.NumberArray.Length;&#xD;&#xA;&#xD;&#xA;    var random = new Random();&#xD;&#xA;    var child = target.NumberArray[random.Next(0, initialCount)];&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Remove(x =&gt; x.NumberArray, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.NumberArray.Length.ShouldBe(initialCount - 1);&#xD;&#xA;&#xD;&#xA;        target2.NumberArray.ShouldHaveTheSameElementsAs(target.NumberArray.ExceptFirst(child));&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;</code></pre>
 <p>Removing complex items can also be accomplished, matching is performed on all fields:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void remove_complex_element()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    var initialCount = target.Children.Length;&#xD;&#xA;&#xD;&#xA;    var random = new Random();&#xD;&#xA;    var child = target.Children[random.Next(0, initialCount)];&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Remove(x =&gt; x.Children, child);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Children.Length.ShouldBe(initialCount - 1);&#xD;&#xA;&#xD;&#xA;        target2.Children.ShouldNotContain(t =&gt; t.Id == child.Id);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>To remove reoccurring values from a collection specify <code>RemoveAction.RemoveAll</code>:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void remove_repeated_primitive_elements()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random();&#xD;&#xA;    var initialCount = target.NumberArray.Length;&#xD;&#xA;&#xD;&#xA;    var random = new Random();&#xD;&#xA;    var child = target.NumberArray[random.Next(0, initialCount)];&#xD;&#xA;    var occurances = target.NumberArray.Count(e =&gt; e == child);&#xD;&#xA;    if (occurances &lt; 2)&#xD;&#xA;    {&#xD;&#xA;        target.NumberArray = target.NumberArray.Concat(new[] {child}).ToArray();&#xD;&#xA;        &#x2B;&#x2B;occurances;&#xD;&#xA;        &#x2B;&#x2B;initialCount;&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Remove(x =&gt; x.NumberArray, child, RemoveAction.RemoveAll);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.NumberArray.Length.ShouldBe(initialCount - occurances);&#xD;&#xA;&#xD;&#xA;        target2.NumberArray.ShouldHaveTheSameElementsAs(target.NumberArray.Except(new[] {child}));&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Rename a Property/Field</h2>
+<h2 id="rename-a-propertyfield">Rename a Property/Field</h2>
 <p>In the case of changing the name of a property or field in your document type that's already persisted
 in your Marten database, you have the option to apply a patch that will move the value from the
 old name to the new name.</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void rename_deep_prop()&#xD;&#xA;{&#xD;&#xA;    var target = Target.Random(true);&#xD;&#xA;    target.Inner.String = &quot;Foo&quot;;&#xD;&#xA;    target.Inner.AnotherString = &quot;Bar&quot;;&#xD;&#xA;&#xD;&#xA;    theSession.Store(target);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    theSession.Patch&lt;Target&gt;(target.Id).Rename(&quot;String&quot;, x =&gt; x.Inner.AnotherString);&#xD;&#xA;    theSession.SaveChanges();&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        var target2 = query.Load&lt;Target&gt;(target.Id);&#xD;&#xA;        target2.Inner.AnotherString.ShouldBe(&quot;Foo&quot;);&#xD;&#xA;        target2.Inner.String.ShouldBeNull();&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>Renaming can be used on nested values.</p>
-<h2>Delete a Property/Field</h2>
+<h2 id="delete-a-propertyfield">Delete a Property/Field</h2>
 <p>The <code>Patch.Delete()</code> operation can be used to remove a persisted property or field without the need
 to load, deserialize, edit and save all affected documents</p>
 <p>To delete a redundant property no longer available on the class use the string overload:</p>
