--- a/documentation/documents/identity/index.html
+++ b/documentation/documents/identity/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -91,7 +91,7 @@
 
 			      	<div id="main-pane">
 			      		<!--title:Document Identity-->
-<p>Besides being serializable, Marten's only other requirement for a .Net type to be a document is the existence of an identifier field or property that Marten can use as the primary key for the document type. The <code>Id</code> can be either a public field or property, and the name must be either <code>id</code> or <code>Id</code>. As of this time, Marten supports these <code>Id</code> types:</p>
+<p>Besides being serializable, Marten's only other requirement for a .Net type to be a document is the existence of an identifier field or property that Marten can use as the primary key for the document type. The <code>Id</code> can be either a public field or property, and the name must be either <code>id</code> or <code>Id</code> or <code>ID</code>. As of this time, Marten supports these <code>Id</code> types:</p>
 <ol>
 <li><code>String</code>. It might be valuable to use a <a href="https://en.wikipedia.org/wiki/Natural_key">natural key</a> as the identifier, especially if it is valuable within the
 <a href="/marten/documentation/documents/advanced/identitymap">Identity Map</a> feature of Marten Db. In this case, the user will
@@ -109,10 +109,10 @@ Marten may support Postgresql sequences or star-based algorithms as later altern
 <ul class="table-of-contents"><li><a href="/marten/documentation/documents/identity/custom">Custom Identity Strategies</a></li><li><a href="/marten/documentation/documents/identity/guid">Guid Identifiers</a></li><li><a href="/marten/documentation/documents/identity/sequential">Sequential Identifiers with Hilo</a></li></ul>
 <p>You can see some example id usages below:</p>
 <pre><code class="language-csharp">&#xD;&#xA;public class Division&#xD;&#xA;{&#xD;&#xA;    // String property as Id&#xD;&#xA;    public string Id { get; set; }&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;public class Category&#xD;&#xA;{&#xD;&#xA;    // Guid&#x27;s work, fields too&#xD;&#xA;    public Guid Id;&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;public class Invoide&#xD;&#xA;{&#xD;&#xA;    // int&#x27;s and long&#x27;s can be the Id&#xD;&#xA;    // &quot;id&quot; is accepted&#xD;&#xA;    public int id { get; set; }&#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Overriding the Choice of Id Property/Field</h2>
+<h2 id="overriding-the-choice-of-id-propertyfield">Overriding the Choice of Id Property/Field</h2>
 <p>If you really want to -- or you're migrating existing document types from another document database -- Marten provides
 the <code>[Identity]</code> attribute to force Marten to use a property or field as the identifier that doesn't match
-the &quot;id&quot; or &quot;Id&quot; convention:</p>
+the &quot;id&quot; or &quot;Id&quot; or &quot;ID&quot; convention:</p>
 <pre><code class="language-csharp">&#xD;&#xA;public class NonStandardDoc&#xD;&#xA;{&#xD;&#xA;    [Identity]&#xD;&#xA;    public string Name;&#xD;&#xA;}&#xD;&#xA;</code></pre>
 
 			      	</div>
