--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -94,7 +94,7 @@
 <!--Url:documents-->
 <p>Many of the Marten contributors were fans of the existing RavenDb database, but wanted a more robust underlying technology. To that end, Marten was largely conceived of as a way to efficiently use the proven Postgresql database engine as a document database and act as a near drop-in replacement
 for RavenDb in several existing applications. As such, you may clearly see some influence from RavenDb on the Marten services and API's.</p>
-<h2>Document Store</h2>
+<h2 id="document-store">Document Store</h2>
 <p>To use Marten as a document database, you first need a Postgresql schema that will store your documents. Once you have that, getting started
 with Marten can be as simple as opening a <code>DocumentStore</code> to your new Postgresql schema:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore&#xD;&#xA;    .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);&#xD;&#xA;</code></pre>
@@ -113,7 +113,7 @@ Marten will build new database tables and functions for each new document type a
 <li><a href="/marten/documentation/documents/advanced/cleaning">Tearing Down Document Storage</a></li>
 <li><a href="/marten/documentation/documents/advanced/hierarchies">Document Hierarchies</a></li>
 </ul>
-<h2>Querying and Loading Documents</h2>
+<h2 id="querying-and-loading-documents">Querying and Loading Documents</h2>
 <p>Now that we've got a document store, we can use that to create a new <code>IQuerySession</code> object just for querying or loading documents from the database:</p>
 <pre><code class="language-csharp">&#xD;&#xA;using (var session = store.QuerySession())&#xD;&#xA;{&#xD;&#xA;    var internalUsers = session&#xD;&#xA;        .Query&lt;User&gt;().Where(x =&gt; x.Internal).ToArray();&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>For more information on the query support within Marten, see:</p>
@@ -125,7 +125,7 @@ Marten will build new database tables and functions for each new document type a
 <li><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a></li>
 <li><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></li>
 </ul>
-<h2>Persisting Documents</h2>
+<h2 id="persisting-documents">Persisting Documents</h2>
 <p>The main service for updating and persisting documents is the <code>IDocumentSession</code>. An <code>IDocumentSession</code> is created by your <code>IDocumentStore</code> from above
 in one of three ways:</p>
 <pre><code class="language-csharp">&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents &#xD;&#xA;using (var session = store.LightweightSession())&#xD;&#xA;{&#xD;&#xA;    var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};&#xD;&#xA;    session.Store(user);&#xD;&#xA;&#xD;&#xA;    session.SaveChanges();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents with a backing &quot;Identity Map&quot;&#xD;&#xA;using (var session = store.OpenSession())&#xD;&#xA;{&#xD;&#xA;    var existing = session&#xD;&#xA;        .Query&lt;User&gt;()&#xD;&#xA;        .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)&#xD;&#xA;        .Single();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents that performas automated&#xD;&#xA;// &quot;dirty&quot; checking of previously loaded documents&#xD;&#xA;using (var session = store.DirtyTrackedSession())&#xD;&#xA;{&#xD;&#xA;    &#xD;&#xA;}&#xD;&#xA;</code></pre>
