--- a/documentation/events/appending/index.html
+++ b/documentation/events/appending/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -95,7 +95,7 @@
 <p>Marten's event sourcing support &quot;appends&quot; event data documents to a single table <code>mt_events.</code> Events must be captured against a stream id, with a second table called <code>mt_streams</code> that Marten uses to
 keep metadata describing the state of an individual stream. Appending events to either a new or existing stream is done within the same Marten transaction as any other document updates or deletions. See
 <a href="/marten/documentation/documents/basics/persisting">Storing Documents and Unit Of Work</a> for more information on Marten transactions.</p>
-<h2>Event Types</h2>
+<h2 id="event-types">Event Types</h2>
 <p>The only requirement that Marten makes on types used as events is that they are:</p>
 <ol>
 <li>Public, concrete types</li>
@@ -104,10 +104,10 @@ keep metadata describing the state of an individual stream. Appending events to 
 <p>Marten does need to know what the event types are before you issue queries against the event data (it's just to handle the deserialization from JSON). The event registration will happen automatically when you append events,
 but for production usage when you may be querying event data before you append anything, you just need to register the event types upfront like this:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var store2 = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.None;&#xD;&#xA;&#xD;&#xA;    _.Events.AddEventType(typeof(QuestStarted));&#xD;&#xA;    _.Events.AddEventType(typeof(MonsterSlayed));&#xD;&#xA;});&#xD;&#xA;</code></pre>
-<h2>Stream or Aggregate Types</h2>
+<h2 id="stream-or-aggregate-types">Stream or Aggregate Types</h2>
 <p>At this point there is no specific requirements about stream aggregate types as they are purely marker types for now. In the future we will probably support
 aggregating events via snapshot caching using the aggregate type.</p>
-<h2>Starting a new Stream</h2>
+<h2 id="starting-a-new-stream">Starting a new Stream</h2>
 <p>As of Marten v0.9, you can <strong>optionally</strong> start a new event stream against some kind of .Net type that theoretically marks the type of stream your capturing.
 Marten does not yet use this type as anything more than metadata, but our thought is that some projections would key off this information and that in a
 future version use that aggregate type to perform versioned snapshots of the entire stream. We may also make the aggregate type optional so that
@@ -118,10 +118,10 @@ id for the stream:</p>
 <p>Or have Marten use a Guid value that you provide yourself:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xD;&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xD;&#xA;&#xD;&#xA;var id = Guid.NewGuid();&#xD;&#xA;session.Events.StartStream&lt;Quest&gt;(id, joined, departed);&#xD;&#xA;session.SaveChanges();&#xD;&#xA;</code></pre>
 <p><strong>At this point, Marten forces you to use <code>System.Guid</code> as the id type of both events or streams</strong></p>
-<h2>Appending Events</h2>
+<h2 id="appending-events">Appending Events</h2>
 <p>If you have an existing stream, you can later append additional events with <code>IEventStore.Append()</code> as shown below:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xD;&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xD;&#xA;&#xD;&#xA;session.Events.Append(id, joined, departed);&#xD;&#xA;&#xD;&#xA;session.SaveChanges();&#xD;&#xA;</code></pre>
-<h3>Appending &amp; Assertions</h3>
+<h3 id="appending-assertions">Appending &amp; Assertions</h3>
 <p><code>IEventStore.Append()</code> supports an overload taking in a parameter <code>int expectedVersion</code> that can be used to assert that events are inserted into the
 event stream if and only if the maximum event id for the stream matches the expected version after event insertions. Otherwise the transaction is aborted
 and a <code>EventStreamUnexpectedMaxEventIdException</code> exception is thrown.</p>
