--- a/documentation/schema/index.html
+++ b/documentation/schema/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -110,14 +110,14 @@ by the auto create schema mode shown above.</li>
 <p><strong>As of Marten v0.9.2, Marten will also check if the existing <em>upsert</em> function and any table indexes match
 what is configured in the document store, and attempts to update these objects if necessary based on the same
 All/None/CreateOnly/CreateOrUpdate rules as the table storage.</strong></p>
-<h2>Overriding Schema Name</h2>
+<h2 id="overriding-schema-name">Overriding Schema Name</h2>
 <p>By default marten will use the default <code>public</code> database scheme to create the document tables and function. You may, however, choose to set a different document store database schema name, like so:</p>
 <pre><code class="language-csharp">&#xD;&#xA;_.DatabaseSchemaName = &quot;other&quot;;&#xD;&#xA;</code></pre>
 <p>The <code>Hilo</code> sequence table is always created in this document store database schema.</p>
 <p>If you wish to assign certain document tables to different (new or existing) schemas, you can do so like that:</p>
 <pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;&#xD;&#xA;    _.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;&#xD;&#xA;    _.MappingFor(typeof(Company));&#xD;&#xA;&#xD;&#xA;    // this will tell marten to use the default &#x27;public&#x27; schema name.&#xD;&#xA;    _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <p>This will create the following tables in your database: <code>other.mt_doc_user</code>, <code>overriden.mt_doc_issue</code> and <code>public.mt_doc_company</code>. When a schema doesn't exist it will be generated in the database.</p>
-<h3>Event Store</h3>
+<h3 id="event-store">Event Store</h3>
 <p>The EventStore database object are by default created in the document store DatabaseSchemaName. This can be overridden by setting the DatabaseSchemaName property of the event store options.</p>
 <pre><code class="language-csharp">&#xD;&#xA;_.Events.DatabaseSchemaName = &quot;event_store&quot;&#xD;&#xA;</code></pre>
 <p>This will ensure that all EventStore tables (mt_stream, mt_events, ...) and functions (mt_apply_transform, mt_apply_aggregation, ...) are created in the <code>event_store</code> schema.</p>
