--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -103,7 +103,7 @@ paket add nuget Marten
 <p>The next step is to get access to a Postgresql <strong>9.5+</strong> database schema. If you want to let Marten build database schema objects on the fly at development time,
 make sure that your user account has rights to execute <code>CREATE TABLE/FUNCTION</code> statements.</p>
 <p>Marten uses the <a href="http://www.npgsql.org">Npgsql</a> library to access Postgresql from .Net, so you'll likely want to read their <a href="http://www.npgsql.org/doc/connection-string-parameters.html">documentation on connection string syntax</a>.</p>
-<h2>Bootstrapping a Document Store</h2>
+<h2 id="bootstrapping-a-document-store">Bootstrapping a Document Store</h2>
 <p>To start up Marten in a running application, you need to create a single <code>IDocumentStore</code> object. The quickest way is to start with
 all the default behavior and a connection string:</p>
 <pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore&#xD;&#xA;    .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);&#xD;&#xA;</code></pre>
@@ -112,7 +112,7 @@ all the default behavior and a connection string:</p>
 <p><em>For more information on document id's, see <a href="/marten/documentation/documents/identity">Document Identity</a>.</em></p>
 <p>And now that we've got a Postgresql schema and an <code>IDocumentStore</code>, let's start persisting and loading user documents:</p>
 <pre><code class="language-csharp">&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents &#xD;&#xA;using (var session = store.LightweightSession())&#xD;&#xA;{&#xD;&#xA;    var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};&#xD;&#xA;    session.Store(user);&#xD;&#xA;&#xD;&#xA;    session.SaveChanges();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents with a backing &quot;Identity Map&quot;&#xD;&#xA;using (var session = store.OpenSession())&#xD;&#xA;{&#xD;&#xA;    var existing = session&#xD;&#xA;        .Query&lt;User&gt;()&#xD;&#xA;        .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)&#xD;&#xA;        .Single();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents that performas automated&#xD;&#xA;// &quot;dirty&quot; checking of previously loaded documents&#xD;&#xA;using (var session = store.DirtyTrackedSession())&#xD;&#xA;{&#xD;&#xA;    &#xD;&#xA;}&#xD;&#xA;</code></pre>
-<h2>Integrating Marten with IoC Containers</h2>
+<h2 id="integrating-marten-with-ioc-containers">Integrating Marten with IoC Containers</h2>
 <p>The Marten team has striven to make the library perfectly usable without the usage of an IoC container, but you may still want to
 use an IoC container specifically to manage dependencies and the lifecyle of Marten objects.</p>
 <p>Using <a href="http://structuremap.github.io">StructureMap</a> as the example container, we recommend registering Marten something like this:</p>
